# backend/internal/controllers/http/v1/handlers/handlers.go
@@ -1,0 +1,26 @@
+package handlers
+
+import (
+	"github.com/nikitaSstepanov/p2p-streaming-service/backend/internal/controllers/http/v1/handlers/handlers"
+	"github.com/nikitaSstepanov/p2p-streaming-service/backend/internal/usecases/services"
+)
+
+type Handlers struct {
+	Movies    *handlers.Movies
+	Account   *handlers.Account
+	Playlists *handlers.Playlists
+	Comments  *handlers.Comments
+	Admin     *handlers.Admin
+	Default   *handlers.Default
+}
+
+func New(services *services.Services) *Handlers {
+	return &Handlers{
+		Movies:    handlers.NewMovies(services),
+		Account:   handlers.NewAccount(services),
+		Playlists: handlers.NewPlaylists(services),
+		Comments:  handlers.NewComments(services),
+		Admin:     handlers.NewAdmin(services),
+		Default:   handlers.NewDefault(),
+	}
+}
