# backend/internal/usecases/storage/entities/user.go
@@ -1,0 +1,18 @@
+package entities
+
+import "encoding/json"
+
+type User struct {
+	Id       uint64  `redis:"id"`
+	Username string  `redis:"username"`
+	Password string  `redis:"password"`
+	Role     string  `redis:"role"`
+}
+
+func (u User) MarshalBinary() ([]byte, error) {
+	return json.Marshal(&u)
+}
+ 
+func (u *User) UnmarshalBinary(data []byte) error {
+	return json.Unmarshal(data, u)
+}
